# QuickVC-official

./: README.md  commons.py  convert.py  data_utils_new_new.py  downsample.py  downsample_general.py  losses.py  mel_processing.py  models.py  modules.py  pqmf.py  pyproject.toml  quickvc.ipynb  quickvc_minfast.ipynb  stft.py  stft_loss.py  train.py  utils.py
configs/: quickvc.json
dataset/: encode.py
