[tool.poetry]
name = "quickvc"
version = "2.0.0"
description = "Clone of QuickVC, high-quality and fast VoiceConversion"
authors = ["quickvc", "tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/QuickVC-official"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
tqdm = "4.*"
omegaconf = "2.3.*"
speechcorpusy = {git = "https://github.com/tarepan/speechcorpusy.git", rev = "main"}
speechdatasety = {git = "https://github.com/tarepan/speechdatasety.git", rev = "main"}
configen = {git = "https://github.com/tarepan/configen.git", rev = "main"}
## Dependencies for Audio
# pyloudnorm = "^0.1.0"
# librosa = "^0.8.0"
## Poetry is not good for version control of PyTorch (it has many many variants for a version, so poetry become confused)
## torch = "2.0.0"
## torchaudio = "2.0.1"

[tool.poetry.dev-dependencies]
types-tqdm = "4.*"
pytest = "7.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  # This is opinionated
  "line-too-long",
  "pointless-string-statement",
  "no-member", # Its pyright's work
]
